--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -71,6 +71,6 @@
         <use href="/src/images/icons.svg#icon-search"></use>
       </svg>
     </button>
-    <div class="form__result">Search result not successful. Enter the correct movie name.</div>
+    <div class="form__result"></div>
   </form>
 </header>
