--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -6,31 +6,18 @@
       </svg>
       <p class="header__title">Filmoteka</p>
     </a>
-    <ul class="header__list"> <div class=layout__form> 
-        <li class="header__item header__register">
-          <p class="header__link" id="register">register</p>
-        </li>
-          <li class="header__item header__log">
-          <p class="header__link" id="log-in">log in</p>
-        </li>
-        <li class="header__item">
-          <a class="header__link header__link--active" href="/src/index.html">home</a>
-        </li>
-        <li class="header__item">
-          <a class="header__link " href="/src/library.html">my library</a>
-        </li>
-
-        <div class="login__form" id="register-div">
+    <ul class="header__list">
+      <li>
+        <div class="" id="login-div">
+          <button class="login" id="log-btn">Log in</button><br />
           <input
-            class="login__input"
             type="email"
             id="login-email"
             name="login-email"
             placeholder="Email"
             required
-          />
+          /><br />
           <input
-          class="login__input"//
             type="password"
             id="login-password"
             name="login-password"
@@ -38,59 +25,52 @@
             required
           />
         </div>
-
-        <button class="login__btn" id="log-btn">Log in</button>
-        <button class="login__btn" id="register-btn">Register</button>
-  
-      </ul>
+      </li>
+      <li>
+        <div id="register-div">
+          <button class="Register" id="register-btn">Register</button><br />
+          <input
+            type="email"
+            id="register-email"
+            name="register-email"
+            placeholder="Email"
+            required
+          /><br />
+          <input
+            type="password"
+            id="register-password"
+            name="register-password"
+            placeholder="Password"
+            required
+          />
+        </div>
+      </li>
+      <!-- <li id="result-box">
+        <h3 id="result"></h3>
+      </li> -->
+      <li class="header__item">
+        <a class="header__link header__link--active" href="/src/index.html"> Home </a>
+      </li>
+      <li class="header__item">
+        <a class="header__link" href="/src/library.html">My Library</a>
+      </li>
+    </ul>
   </div>
-  <script>
-const register = document.querySelector(".header__register");
-const log = document.querySelector(".header__log");
-const loginForm = document.querySelector(".login__form");
-const registerLink = document.getElementById('register');
-const loginLink = document.getElementById('log-in');
-const logInBtn = document.getElementById('log-btn');
-const registerBtn = document.getElementById('register-btn');
-
-register.addEventListener('click', () => {
-  loginForm.style.visibility = 'visible';
-  registerBtn.style.visibility = 'visible';
-  //logInBtn.classList.add('disabled');
-  registerLink.style.color = 'red'
-  
-  if (registerBtn.style.visibility === 'visible'){
-    logInBtn.style = 'hidden';
-    loginLink.style.color = 'white';
-  }});
-
-log.addEventListener('click', () => {
-  loginForm.style.visibility = 'visible';
-  logInBtn.style.visibility = 'visible';
- // registerBtn.classList.add('disabled');
-  loginLink.style.color = 'red';
-
-if (logInBtn.style.visibility === 'visible'){
-  registerBtn.style.visibility = 'hidden';
-  registerLink.style.color = 'white';
-}});
-  </script>
-
-<form class="form" id="form-search">
-  <input
-    class="form__input"
-    type="text"
-    name="search"
-    autocomplete="off"
-    placeholder="Movie search"
-    autocomplete="off"
-    required
-  />
-  <button class="form__btn" type="submit">
-    <svg class="form__icon" width="16" height="16">
-      <use href="/src/images/icons.svg#icon-search"></use>
-    </svg>
-  </button>
-  <div class="form__result">Search result not successful. Enter the correct movie name.</div>
-</form>
+  <form class="form" id="form-search">
+    <input
+      class="form__input"
+      type="text"
+      name="search"
+      autocomplete="off"
+      placeholder="Movie search"
+      autocomplete="off"
+      required
+    />
+    <button class="form__btn" type="submit">
+      <svg class="form__icon" width="16" height="16">
+        <use href="/src/images/icons.svg#icon-search"></use>
+      </svg>
+    </button>
+    <div class="form__result"></div>
+  </form>
 </header>
