--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -6,20 +6,21 @@
       </svg>
       <p class="header__title">Filmoteka</p>
     </a>
-    <ul class="header__list"> <div class=layout__form> 
-        <li class="header__item header__register">
+    <div class="header__list"> 
+      <div class=layout__form> 
+        <div class="header__item header__register">
           <p class="header__link" id="register">register</p>
-        </li>
-          <li class="header__item header__log">
+        </div>
+          <div class="header__item header__log">
           <p class="header__link" id="log-in">log in</p>
-        </li>
-        <li class="header__item">
+          </div>
+        <div class="header__item">
           <a class="header__link" href="/src/index.html">home</a>
-        </li>
-        <li class="header__item">
+        </div>
+        <div class="header__item">
           <a class="header__link header__link--active" href="/src/library.html">my Library</a>
-        </li>
-        <div class="login__form" id="register-div">
+        </div>
+        <form class="login__form" id="register-div">
           <input
             class="login__input"
             type="email"
@@ -29,53 +30,25 @@
             required
           />
           <input
-          class="login__input"//
+          class="login__input"
             type="password"
             id="login-password"
             name="login-password"
             placeholder="Password"
             required
           />
-        </div>
+        </form>
 
         <button class="login__btn" id="log-btn">Log in</button>
         <button class="login__btn" id="register-btn">Register</button>
   
-      </ul>
+      </div>
+    </div>
   </div>
-  <script>
-const register = document.querySelector(".header__register");
-const log = document.querySelector(".header__log");
-const loginForm = document.querySelector(".login__form");
-const registerLink = document.getElementById('register');
-const loginLink = document.getElementById('log-in');
-const logInBtn = document.getElementById('log-btn');
-const registerBtn = document.getElementById('register-btn');
 
-register.addEventListener('click', () => {
-  loginForm.style.visibility = 'visible';
-  registerBtn.style.visibility = 'visible';
-  //logInBtn.classList.add('disabled');
-  registerLink.style.color = 'red'
-  
-  if (registerBtn.style.visibility === 'visible'){
-    logInBtn.style = 'hidden';
-    loginLink.style.color = 'white';
-  }});
-
-log.addEventListener('click', () => {
-  loginForm.style.visibility = 'visible';
-  logInBtn.style.visibility = 'visible';
- // registerBtn.classList.add('disabled');
-  loginLink.style.color = 'red';
-
-if (logInBtn.style.visibility === 'visible'){
-  registerBtn.style.visibility = 'hidden';
-  registerLink.style.color = 'white';
-}});
-  </script>
-   <div class="button">
+  <div class="button">
     <button type="button" class="button__status">watched</button>
     <button type="button" class="button__status">queue</button>
   </div>
+  
 </header>
