--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -2,13 +2,13 @@
   @extend .container;
   padding-top: 40px;
   padding-bottom: 44px;
-  background-image: url('/src/images/backgroundMobile.jpg');
+  background-image: url('/src/images/backgroundmobile.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
   &--library {
-    background-image: url('/src/images/backgroundLibraryMobile.jpg');
+    background-image: url('/src/images/backgroundlibrarymobile.jpg');
   }
 
   &__container {
@@ -56,6 +56,7 @@
     font-size: $smallFontSize;
     line-height: $smallLineHeight;
     color: $defaultColor;
+    cursor: pointer;
   }
 
   &__link--active {
@@ -223,20 +224,20 @@
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .header {
-    background-image: url('/src/images/backgroundMobile@2x.jpg');
+    background-image: url('/src/images/backgroundmobile@2x.jpg');
 
     &--library {
-      background-image: url('/src/images/backgroundLibraryMobile@2x.jpg');
+      background-image: url('/src/images/backgroundlibrarymobile@2x.jpg');
     }
   }
 }
 
 @media (min-width: 768px) {
   .header {
-    background-image: url('/src/images/backgroundTablet.jpg');
+    background-image: url('/src/images/backgroundtablet.jpg');
 
     &--library {
-      background-image: url('/src/images/backgroundLibraryTablet.jpg');
+      background-image: url('/src/images/backgroundlibrarytablet.jpg');
     }
   }
 }
@@ -245,20 +246,20 @@
   (min-width: 768px) and (min-resolution: 192dpi),
   (min-width: 768px) and (min-resolution: 2dppx) {
   .header {
-    background-image: url('/src/images/backgroundTablet@2x.jpg');
+    background-image: url('/src/images/backgroundtablet@2x.jpg');
 
     &--library {
-      background-image: url('/src/images/backgroundLibraryTablet@2x.jpg');
+      background-image: url('/src/images/backgroundlibrarytablet@2x.jpg');
     }
   }
 }
 
 @media (min-width: 1280px) {
   .header {
-    background-image: url('/src/images/backgroundDesktop.jpg');
+    background-image: url('/src/images/backgrounddesktop.jpg');
 
     &--library {
-      background-image: url('/src/images/backgroundLibraryDesktop.jpg');
+      background-image: url('/src/images/backgroundlibrarydesktop.jpg');
     }
   }
 }
@@ -267,10 +268,10 @@
   (min-width: 1280px) and (min-resolution: 192dpi),
   (min-width: 1280px) and (min-resolution: 2dppx) {
   .header {
-    background-image: url('/src/images/backgroundDesktop@2x.jpg');
+    background-image: url('/src/images/backgrounddesktop@2x.jpg');
 
     &--library {
-      background-image: url('/src/images/backgroundLibraryDeskop@2x.jpg');
+      background-image: url('/src/images/backgroundlibrarydesktop@2x.jpg');
     }
   }
 }
